Making sure status does not wrap in mobile mode (Fixes #5307)

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2276,3 +2276,7 @@ table.display thead th.sorting_disabled div.DataTables_sort_wrapper {
 .dd-selected-text, .dd-option-text {
 	color: black !important;
 }
+
+.status {
+	white-space: nowrap;
+}
